# langchain-tutorials

./: .env.example  client.py  notes.md  pyproject.toml  serve.py
01-Simple-LLM-Application-LCEL/: client.py  simple-llm-app.ipynb
01-chatbot/: app.py  localama.py
02-Chatbot/: chatbot.ipynb
02-api/: client.py
03-Vector-Stores-and-Retrievers/: vector-store-and-retrievers.ipynb
03-rag/: simplerag.ipynb
04-advanced-rag/: advanced-rag.ipynb
Archive/: README.md
Archive/02-api/: app.py
