[tool.poetry]
name = "langchain-tutorials"
version = "0.1.0"
description = ""
authors = ["Rishil Ramesh <rishil.ramesh@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
