[tool.poetry]
name = "langchain-tutorials"
version = "0.1.0"
description = ""
authors = ["Rishil Ramesh <rishil.ramesh@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
python-dotenv = "^1.0.1"
langserve = {extras = ["all"], version = "^0.2.2"}
faiss-cpu = "^1.8.0"
langchain-openai = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
